--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -13,7 +13,18 @@
 <body>
 
 <div class="container">
-    <h1>Heh</h1>
+    <form action="">
+        <p style="margin-top: 100px"><strong>Введите имя:</strong></p>
+        <input type="text" name="name">
+        <br>
+        <p style="margin-top: 36px"><strong>Введите сообщение:</strong></p>
+        <input type="text" name="message">
+        <button type="submit">Отправить</button>
+        <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
+        <div style="border: 1px solid black; padding: 10px">
+               message
+        </div>
+    </form>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
