--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -6,25 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+    <script src="app.js"></script>
 
     <title>Chat page</title>
 </head>
 <body>
 
 <div class="container">
-    <form action="">
+
         <p style="margin-top: 100px"><strong>Введите имя:</strong></p>
         <input type="text" name="name">
         <br>
         <p style="margin-top: 36px"><strong>Введите сообщение:</strong></p>
         <input type="text" name="message">
-        <button type="submit">Отправить</button>
+        <button onclick="SendMessage()">Отправить</button>
         <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
-        <div style="border: 1px solid black; padding: 10px">
+        <div style="border: 1px solid black; padding: 10px" id="allMes">
                message
         </div>
-    </form>
+
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
