--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -21,8 +21,9 @@
         <input type="text" name="message">
         <button onclick="SendMessage()">Отправить</button>
         <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
-        <div style="border: 1px solid black; padding: 10px" id="allMes">
-               message
+        <div class="temp" style="border: 1px solid black; border-radius: 10px; padding: 10px">
+
+               <div id="final">mes</div>
         </div>
 
 </div>
