--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -21,9 +21,9 @@
         <input type="text" name="message">
         <button onclick="SendMessage()">Отправить</button>
         <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
-        <div class="temp" style="border: 1px solid black; border-radius: 10px; padding: 10px">
+        <div style="border: 1px solid black; border-radius: 10px; padding: 10px">
 
-               <div id="final">mes</div>
+               <div id="final"></div>
         </div>
 
 </div>
