working messanger v2 (dublicate message)

--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -21,7 +21,7 @@
         <input type="text" name="message">
         <button onclick="SendMessage()">Отправить</button>
         <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
-        <div style="border: 1px solid black; border-radius: 10px; padding: 10px">
+        <div class="allMsg" style="border: 1px solid black; border-radius: 10px; padding: 10px">
 
                <div id="final"></div>
         </div>
