--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -15,11 +15,11 @@
 <div class="container">
 
         <p style="margin-top: 100px"><strong>Введите имя:</strong></p>
-        <input type="text" name="name">
+        <input class="form-control" type="text">
         <br>
         <p style="margin-top: 36px"><strong>Введите сообщение:</strong></p>
-        <input type="text" name="message">
-        <button onclick="SendMessage()">Отправить</button>
+        <textarea class="form-control" name="" id="" rows="3"></textarea>
+        <button class="btn btn-success" type="submit" onclick="SendMessage()">Отправить</button>
         <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
         <div class="allMsg" style="border: 1px solid black; border-radius: 10px; padding: 10px">
 
