--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -19,7 +19,7 @@
         <br>
         <p style="margin-top: 36px"><strong>Введите сообщение:</strong></p>
         <textarea class="form-control" name="" id="" rows="3"></textarea>
-        <button class="btn btn-success" type="submit" onclick="SendMessage()">Отправить</button>
+        <button class="btn btn-success mt-3" type="submit" onclick="SendMessage()">Отправить</button>
         <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
         <div class="allMsg" style="border: 1px solid black; border-radius: 10px; padding: 10px">
 
