--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -21,8 +21,7 @@
         <textarea class="form-control" name="" id="" rows="3"></textarea>
         <button class="btn btn-success mt-3" type="submit" onclick="SendMessage()">Отправить</button>
         <p style="margin-top: 36px"><strong>Все сообщения</strong></p>
-        <div class="allMsg" style="border: 1px solid black; border-radius: 10px; padding: 10px">
-
+        <div class="card allMsg" style="border-radius: 10px; padding: 10px; background-color: #f1f1f1">
                <div id="final"></div>
         </div>
 
